# swift-embedded-pm

./: .gitignore  README.md  Story.md
main/: CMakeLists.txt  Package.swift
main/Source/Main/: esp_main.swift
